--- a/ProfileScreenApp/app/src/main/res/layout/post_row_item.xml
+++ b/ProfileScreenApp/app/src/main/res/layout/post_row_item.xml
@@ -17,7 +17,7 @@
             android:layout_width="0dp"
             android:layout_height="0dp"
             android:scaleType="centerCrop"
-            bind:loadImageUrl="post.imageUrl"
+            bind:loadImageUrl="@{post.imageUrl}"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintDimensionRatio="H,1:1"
             app:layout_constraintLeft_toLeftOf="parent"
