--- a/DataBindingJavaApp/app/src/main/res/layout/tek_sutun_urun_layout.xml
+++ b/DataBindingJavaApp/app/src/main/res/layout/tek_sutun_urun_layout.xml
@@ -3,6 +3,13 @@
 <layout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
+    <data>
+        <import type="android.view.View"/>
+        <variable
+            name="urun"
+            type="com.example.databindingjavaapp.models.Urun"/>
+
+    </data>
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:id="@+id/tumLayout"
@@ -17,7 +24,7 @@
             android:layout_height="wrap_content"
             android:layout_marginStart="8dp"
             android:layout_marginTop="8dp"
-            android:rating="23"
+            android:rating="@{urun.degerelendirmeNotu}"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/tvFiyat" />
 
@@ -27,7 +34,7 @@
             android:layout_height="wrap_content"
             android:layout_marginStart="8dp"
             android:layout_marginBottom="16dp"
-            android:text="600"
+            android:text="@{String.valueOf(urun.degerlendirmeSayisi)}"
             android:textSize="18sp"
             android:textStyle="bold"
             app:layout_constraintBottom_toBottomOf="parent"
@@ -41,7 +48,7 @@
             android:layout_marginStart="8dp"
             android:layout_marginTop="8dp"
             android:layout_marginEnd="8dp"
-            android:text="Başlık"
+            android:text="@{urun.baslik}"
             android:textColor="@color/colorAccent"
             android:textSize="18sp"
             android:textStyle="bold"
@@ -67,7 +74,7 @@
             android:layout_height="wrap_content"
             android:layout_marginStart="8dp"
             android:layout_marginTop="8dp"
-            android:text="25"
+            android:text="@{urun.kampanyaVarMi()? String.valueOf(urun.kampanyaliFiyat) : String.valueOf(urun.fiyat)}"
             android:textColor="@color/colorAccent"
             android:textSize="24sp"
             android:textStyle="bold"
@@ -79,10 +86,11 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginStart="16dp"
-            android:text="12"
+            android:text="@{String.valueOf(urun.fiyat)}"
             android:textSize="18sp"
             android:textStyle="bold"
             android:background="@drawable/ustunu_ciz"
+            android:visibility="@{urun.kampanyaVarMi() ? View.VISIBLE : View.GONE}"
             app:layout_constraintBottom_toBottomOf="@+id/tvFiyat"
             app:layout_constraintStart_toEndOf="@+id/tvFiyat"
             app:layout_constraintTop_toTopOf="@+id/tvFiyat" />
@@ -92,6 +100,7 @@
             style="?android:attr/progressBarStyle"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:visibility="gone"
             app:layout_constraintBottom_toBottomOf="@+id/imageView"
             app:layout_constraintEnd_toEndOf="@+id/imageView"
             app:layout_constraintStart_toStartOf="@+id/imageView"
